# ProtoWeaver

./: .eslintrc.json  .gitignore  Makefile  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/preview/: README.md  index.html  package.json
apps/preview/src/: App.tsx  Renderer.tsx  index.css
apps/studio/: README.md  package.json  tailwind.config.js  tsconfig.json
apps/studio/app/: globals.css  layout.tsx  page.tsx
apps/studio/components/: chat-panel.tsx  preview-pane.tsx  upload-panel.tsx
apps/studio/hooks/: use-prototype.ts
apps/studio/lib/: api.ts
data/samples/: README.md
docs/: architecture.md  pipeline.md  usage.md
models/: README.md
protoweaver_workspace/: README.md
scripts/: README.md
services/api/: README.md  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api_v1/: router.py
services/api/app/api_v1/endpoints/: generation.py  iterations.py  projects.py
services/api/app/core/: __init__.py  config.py
services/api/app/models/: README.md
services/api/app/schemas/: project.py
services/api/app/services/: __init__.py  pipeline.py  store.py
services/api/app/utils/: README.md
services/api/tests/: test_api.py  test_pipeline.py
services/codegen/: README.md  package.json
services/codegen/src/: index.test.ts  index.ts
services/worker/: README.md  pyproject.toml
services/worker/src/protoweaver_worker/: __init__.py  worker.py
