[project]
name = "protoweaver-api"
version = "0.1.0"
description = "ProtoWeaver FastAPI backend"
requires-python = ">=3.10"
authors = [{ name = "ProtoWeaver Team", email = "team@protoweaver.ai" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
    "pydantic>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
